<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    android:orientation="vertical"
    tools:context="com.example.akshit.imagesearch.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_card_height"
        android:layout_margin="@dimen/search_card_margin"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/default_card_radius"
        app:cardElevation="@dimen/default_card_elevation">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/search_query_margin"
                android:layout_marginRight="@dimen/search_query_margin"
                android:layout_marginTop="@dimen/search_query_margin"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/search_query_margin"
                android:layout_marginEnd="@dimen/search_query_margin"
                android:id="@+id/textInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/query_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_search_query"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/search_card_progress"
                android:visibility="gone"
                android:layout_width="@dimen/search_progress_param"
                android:layout_height="@dimen/search_progress_param"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/search_progress_margin"
                app:layout_constraintRight_toLeftOf="@+id/search_btn" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_btn_margin"
                android:layout_marginEnd="@dimen/search_btn_margin"
                android:background="?attr/selectableItemBackground"
                android:text="@string/search"
                android:textColor="@android:color/white"
                android:textSize="@dimen/search_btn_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridView
            android:id="@+id/images_grid_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:gravity="center"
            android:numColumns="2"
            android:stretchMode="columnWidth" />

        <android.support.v7.widget.CardView
            android:id="@+id/loading_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:layout_margin="@dimen/search_card_margin"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/default_card_radius"
            app:cardElevation="@dimen/default_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/loading_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/progress_bar_margin"
                    android:layout_marginLeft="@dimen/progress_bar_margin"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/loading_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_more_results"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/loading_text_size" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

</LinearLayout>
